<resources>
    <string name="app_name" translatable="false">ITMO.TEST</string>
    <string name="next">Next</string>
    <string name="done">Done!</string>
    <string name="go" translatable="false">Go!</string>
    <string name="exit_title">Exit</string>
    <string name="exit_confirm">Would you like to finish this test? All progress will be lost</string>
    <string name="nothing_selected">Please select an answer</string>
    <string name="question_1_title" translatable="false">Проверьте, насколько хорошо вы разбираетесь в экзотических языках программирования, попытавшись узнать их по программе «Hello, World!».</string>
    <string name="question_1_content" translatable="false">HAI\nCAN HAS STDIO?\nVISIBLE &quot;HAI WORLD!&quot;\nKTHXBYE</string>
    <string name="question_1_answer1" translatable="false">Так, всё большими буквами, кажется, я видел такое в древних манускриптах. Это наверняка COBOL</string>
    <string name="question_1_answer2" translatable="false">LOLCODE</string>
    <string name="question_1_answer3" translatable="false">Больше похоже на сообщения в мессенджере, чем на код программы. А ведь есть же язык, основанный на обмене сообщениями. Это Smalltalk</string>
    <string name="question_1_answer4" translatable="false">О, довольно простой и понятный код, не то что эти ваши ассемблеры. Наверное, это Java</string>
    <string name="question_1_answer1_hint" translatable="false">Это потому что он говорит КАПСОМ? Нет, это язык LOLCODE, основанный на интернет-сленге.</string>
    <string name="question_1_answer2_hint" translatable="false">Да, это именно он. Язык, основанный на популярном в определённых кругах интернет-сленге. Так, к примеру, оператор if в этом языке выглядит как O RLY?, а комментарий начинается с BTW. Да, капс обязателен. Ну а назван он в честь интернет-мемов lolcat, фотографий смешных котиков с надписями, содержащими намеренные грубые грамматические ошибки.</string>
    <string name="question_1_answer3_hint" translatable="false">Вот и нет, этот язык называется LOLCODE. От интернет общения он получил не структуру, а специфический сленг.</string>
    <string name="question_1_answer4_hint" translatable="false">А где же скобочки? И почему всё капсом, Java же чувствителен к регистру. А это LOLCODE.</string>
    <string name="question_2_title" translatable="false">Какой из этих языков программирования появился в 2018 году?</string>
    <string name="question_2_answer1" translatable="false">Dart</string>
    <string name="question_2_answer2" translatable="false">Rockstar</string>
    <string name="question_2_answer3" translatable="false">Motes</string>
    <string name="question_2_answer4" translatable="false">Ring</string>
    <string name="question_2_answer1_hint" translatable="false">Dart появился в 2011 году. Впрочем, в 2018 вышел Dart 2. А правильный ответ — Rockstar. Это динамически типизированный язык для создания программ, похожих на песни 80-х годов.</string>
    <string name="question_2_answer2_hint" translatable="false">Да, программист Дилан Битти разработал этот динамически типизированный язык для создания программ, похожих на песни 80-х годов. Не программа, а песня!</string>
    <string name="question_2_answer3_hint" translatable="false">Этот чудесный язык для программирования на эмодзи появился в 2017 году. А в 2018 программист Дилан Битти разработал Rockstar — динамически типизированный язык для создания программ, похожих на песни 80-х годов.</string>
    <string name="question_2_answer4_hint" translatable="false">Нет, этот мультипарадигмальный язык с динамической типизацией появился в 2016 году. А в 2018 программист Дилан Битти разработал Rockstar — динамически типизированный язык для создания программ, похожих на песни 80-х годов.</string>
    <string name="question_3_title" translatable="false">Что (пока) не умеет делать нейронная сеть?</string>
    <string name="question_3_answer1" translatable="false">Разгадывать капчу</string>
    <string name="question_3_answer2" translatable="false">Объяснять причины своих действий</string>
    <string name="question_3_answer3" translatable="false">Распознавать оптические иллюзии</string>
    <string name="question_3_answer4" translatable="false">Писать себя</string>
    <string name="question_3_answer1_hint" translatable="false">А вот и может! Нейросеть распознаёт текстовую капчу за 0,05 секунды, не требуя больших мощностей. Но распознать оптическую иллюзию у ИИ пока не получается.</string>
    <string name="question_3_answer2_hint" translatable="false">Международная группа исследователей и команда Facebook AI Research научили нейросеть и этому. А вот распознавать оптические иллюзии нейросеть пока не может.</string>
    <string name="question_3_answer3_hint" translatable="false">Да, с этим у нейросетей пока проблемы.</string>
    <string name="question_3_answer4_hint" translatable="false">Нет, в 2018 году нейросеть научилась писать себя на Java. А вот с оптическими иллюзиями у нейросетей пока проблемы.</string>
    <string name="question_4_title" translatable="false">Что такое «динамическое программирование»?</string>
    <string name="question_4_answer1" translatable="false">Программирование с использованием динамической памяти</string>
    <string name="question_4_answer2" translatable="false">Программирование в быстром темпе</string>
    <string name="question_4_answer3" translatable="false">Стиль программирования, названный так по имени автора</string>
    <string name="question_4_answer4" translatable="false">Метод решения задач</string>
    <string name="question_4_answer1_hint" translatable="false">Нет, динамическое программирование — это метод решения задач путём их разбиения на более простые подзадачи.</string>
    <string name="question_4_answer2_hint" translatable="false">Нет, динамическое программирование — это метод решения задач путём их разбиения на более простые подзадачи.</string>
    <string name="question_4_answer3_hint" translatable="false">Нет, динамическое программирование — это метод решения задач путём их разбиения на более простые подзадачи.</string>
    <string name="question_4_answer4_hint" translatable="false">Верно, это метод решения задач путём их разбиения на более простые подзадачи.</string>
    <string name="question_5_title" translatable="false">Буратино дали три яблока. Два он съел. Сколько яблок осталось у Буратино?</string>
    <string name="question_5_answer1" translatable="false">Одно</string>
    <string name="question_5_answer2" translatable="false">У него не осталось яблок</string>
    <string name="question_5_answer3" translatable="false">Никто не знает наверняка</string>
    <string name="question_5_answer1_hint" translatable="false">А вот и нет! Вы же не знаете, сколько яблок у него было изначально. Мораль — обнуляйте переменные.</string>
    <string name="question_5_answer2_hint" translatable="false">Даже если считать, что изначально у него не было яблок, всё равно 3-2=1. У вас всё в порядке с математикой?</string>
    <string name="question_5_answer3_hint" translatable="false">Правильно. Переменную забыли обнулить. Мало ли сколько у него было яблок изначально.</string>
    <string name="question_6_title" translatable="false">Проверьте, насколько хорошо вы разбираетесь в экзотических языках программирования, попытавшись узнать их по программе «Hello, World!».</string>
    <string name="question_6_content" translatable="false">(=&lt;`:9876Z4321UT.-Q+*)M’&amp;%$H»!~}|Bzy?=|{z]KwZY44Eq0/{mlk**hKs_dG5[m_BA{?-Y;;Vb\'rR5431M}/.zHGwEDCBA@986543W10/.R,+O&lt;</string>
    <string name="question_6_answer1" translatable="false">О, а вот тут много всяких символов. Это Perl</string>
    <string name="question_6_answer2" translatable="false">Много скобок, но в отличие от LISP, они не только круглые. Судя по чередованию больших и маленьких букв, язык чувствителен к регистру. Это Glass</string>
    <string name="question_6_answer3" translatable="false">Одна строка символов без пробелов — BIT</string>
    <string name="question_6_answer4" translatable="false">Выглядит так, будто кто-то старается нас запутать. Если это и в самом деле язык программирования, то какой-нибудь Malbolge</string>
    <string name="question_6_answer1_hint" translatable="false">Нет, это не Perl. Маловато $. На самом деле это Malbolge — один из сложнейших языков.</string>
    <string name="question_6_answer2_hint" translatable="false">Нет, это Malbolge, язык, ориентированный на троичную систему счисления. Glass тоже не самый простой язык, но вывод в нём организован более очевидно.</string>
    <string name="question_6_answer3_hint" translatable="false">Близко, но нет, в BIT программа будет содержать непрерывную последовательность букв в верхнем регистре, без символов. Эта программа — на Malbolge.</string>
    <string name="question_6_answer4_hint" translatable="false">Да, это верный ответ. Название восьмого круга ада по Данте. Этот язык разработан так, чтобы по максимуму усложнить жизнь кодеру.</string>
    <string name="question_7_title" translatable="false">На прямой отмечены четыре точки. Сколько всего отрезков на прямой?</string>
    <string name="question_7_answer1" translatable="false">3</string>
    <string name="question_7_answer2" translatable="false">4</string>
    <string name="question_7_answer3" translatable="false">5</string>
    <string name="question_7_answer4" translatable="false">6</string>
    <string name="question_7_answer1_hint" translatable="false">Неправильно!\nУпорядочим отрезки c помощью их левых концов. Тогда количество отрезков, начинающихся в данной точке, равно количеству точек справа. Справа от первой точки три точки, справа от второй две и справа от третьей одна. Значит, всего 6 отрезков.</string>
    <string name="question_7_answer2_hint" translatable="false">Неправильно!\nУпорядочим отрезки c помощью их левых концов. Тогда количество отрезков, начинающихся в данной точке, равно количеству точек справа. Справа от первой точки три точки, справа от второй две и справа от третьей одна. Значит, всего 6 отрезков.</string>
    <string name="question_7_answer3_hint" translatable="false">Неправильно!\nУпорядочим отрезки c помощью их левых концов. Тогда количество отрезков, начинающихся в данной точке, равно количеству точек справа. Справа от первой точки три точки, справа от второй две и справа от третьей одна. Значит, всего 6 отрезков.</string>
    <string name="question_7_answer4_hint" translatable="false">Правильно!\nУпорядочим отрезки c помощью их левых концов. Тогда количество отрезков, начинающихся в данной точке, равно количеству точек справа. Справа от первой точки три точки, справа от второй две и справа от третьей одна. Значит, всего 6 отрезков.</string>
    <string name="question_8_title" translatable="false">При каких значениях n выражение ((n &amp; (n - 1)) == 0) истинно?</string>
    <string name="question_8_answer1" translatable="false">при n >= 0</string>
    <string name="question_8_answer2" translatable="false">при n % 2 == 0</string>
    <string name="question_8_answer3" translatable="false">если n > 0, то при нечетных значениях n, а если n &lt;= 0, то при четных значениях n</string>
    <string name="question_8_answer4" translatable="false">при n == 0 или n равном целым степеням двойки</string>
    <string name="question_8_answer1_hint" translatable="false">Неправильно!\nВыражение истинно при n == 0 или n равном целым степеням двойки</string>
    <string name="checkbox_reg" translatable="false">Согласен на обработку персональных данных</string>
    <string name="reg_title">One little step left...</string>
    <string name="reg_desc">To find out your place in the ranking and participate\n in the prize draw, enter your contact details</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="congrat">Congratulations,</string>
    <string name="code">Your code:</string>
    <string name="score">Score</string>
    <string name="time">Time</string>
</resources>